[gd_scene load_steps=8 format=2]

[ext_resource path="res://Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Player/player.png" type="Texture" id=2]
[ext_resource path="res://Player/UI.gd" type="Script" id=3]
[ext_resource path="res://Player/window_blue.png" type="Texture" id=4]
[ext_resource path="res://Player/Exclamation.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 20, 20 )

[sub_resource type="CircleShape2D" id=2]
radius = 87.8032

[node name="Player" type="KinematicBody2D" groups=[
"Player",
]]
collision/safe_margin = 10.0
script = ExtResource( 1 )

[node name="Body" type="Sprite" parent="."]
scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 2 )

[node name="Look" type="Sprite" parent="."]
scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 2 )

[node name="PlayerCollision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="InteractionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
visible = false
shape = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="TextEdit" type="TextEdit" parent="Camera2D"]
visible = false
margin_left = -119.146
margin_top = -180.319
margin_right = 140.854
margin_bottom = -55.3189
text = "		
		
		
		YOU WON!! CONGRATULATION"

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource( 3 )

[node name="NinePatchRect" type="NinePatchRect" parent="UI"]
margin_right = 100.0
margin_bottom = 100.0
texture = ExtResource( 4 )

[node name="Exclamation" type="Sprite" parent="UI"]
visible = false
position = Vector2( 144.006, 52.9552 )
scale = Vector2( 2.30024, 2.92503 )
texture = ExtResource( 5 )
[connection signal="inventory_update" from="." to="UI" method="_on_Player_inventory_update"]
[connection signal="area_entered" from="InteractionArea" to="." method="_on_InteractionArea_area_entered"]
[connection signal="area_exited" from="InteractionArea" to="." method="_on_InteractionArea_area_exited"]
